# catalogAccess

./: .cvsignore  CMakeLists.txt  ChangeLog  SConscript  azure-pipelines.yml  catalogAccessLib.py
catalogAccess/: quantity.h
cmt/: requirements
data/: 1rxs_50.fits  1rxs_50.tsv  3EG_all.fits  3EG_all.tsv  test1.fits
data/outref/: 1rxs_50.out.DEJ  1rxs_50.out.fits  1rxs_50.out.txt  screenOut.txt
doc/: release.notes  used_packages.html
doc/doxy-html/: annotated.html  catalog_8cxx-source.html  catalog_8cxx.html  catalog_8cxx__incl.dot  catalog_8h-source.html  catalog_8h.html  catalog_8h__dep__incl.dot  catalog_8h__incl.dot  catalog__io_8cxx-source.html  catalog__io_8cxx.html  catalog__io_8cxx__incl.dot  catalog__io_text_8cxx-source.html  catalog__io_text_8cxx.html  catalog__io_text_8cxx__incl.dot  catalog__sel_8cxx-source.html  catalog__sel_8cxx.html  catalog__sel_8cxx__incl.dot  classcatalog_access_1_1_catalog-members.html  classcatalog_access_1_1_catalog.html  classcatalog_access_1_1_quantity-members.html  classcatalog_access_1_1_quantity.html  files.html  functions.html  globals.html  graph_legend.html  index.html  main.html  main__test_8cxx-source.html  main__test_8cxx.html  main__test_8cxx__incl.dot  main__test_8time_8cxx-source.html  main__test_8time_8cxx.html  main__test_8time_8cxx__incl.dot  mainpage_8h-source.html  mainpage_8h.html  namespacecatalog_access.html  namespacemembers.html  namespaces.html  namespacetip.html  (+11 more)
src/: catalog.cxx  catalog.h  catalog_io.cxx  catalog_ioText.cxx  catalog_sel.cxx  mainpage.h  quantity.cxx  quantity.h
(+1 files in other folders)
